everithing working except removing event listeners

--- a/index.html
+++ b/index.html
@@ -28,10 +28,12 @@
   </div>
 
   <div id="buttons">
-    <button class="rock disabled button"></button>
+    <button class="rock"></button>
     <button class="paper"></button>
     <button class="scissors"></button>
   </div>
+  <div class="retry hidden"><h1>Try again</h1></div>
+  
 <script src="script.js"></script>
 </body>
 </html>
